# database-re-engineering

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: config.example.yaml
schemascribe/: __init__.py  __main__.py  cli.py  config.py  db.py  extractor.py  generator.py  inference.py  models.py  patterns.py  pipeline.py  relationships.py
schemascribe/templates/: database.md.j2  schema.md.j2  table.md.j2
tests/: test_config.py  test_inference.py  test_patterns.py  test_relationships.py
